# tachyon-tex

./: .dockerignore  .gitignore  COMPARATIVE_BENCHMARK.md  Cargo.toml  Dockerfile  Dockerfile.cross  Dockerfile.windows  LATEX_API_FOR_AGENTS.md  LICENSE  PERFORMANCE_PLAN.md  README.md  docker-compose.yaml  run_local.ps1  run_local.sh  warmup.tex
docs/: TACHYON_TEX_PAPER.tex  index.html
public/: app.js  index.html  styles.css
scripts/: benchmark.py
src/: compiler.rs  handlers.rs  healer.rs  main.rs  mcp.rs  models.rs  services.rs
test/: main.aux  main.out  main.tex
test/latex-text/: FG2026.sty  egbib.bib  main.tex
tests/: api.test.js  benchmark-folder.js  deep-benchmark.js  hmr-benchmark.mjs  moonshot_benchmark.js  optimization_test.js  perf_results.txt  poc_pdf_patch.rs  quick-test.ps1  webhook-perf.test.js  zip-helper.js
