[package]
name = "tachyon-tex"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tectonic = { version = "0.15", features = ["external-harfbuzz"] }
tower-http = { version = "0.5", features = ["limit", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
zip = "0.6"
futures-util = "0.3"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"

[profile.release]
opt-level = 3       # Max performance (Speed)
lto = true          # Enable Link Time Optimization (Speed + Size)
codegen-units = 1   # More optimizations (Speed + Size)
strip = true        # Automatically strip symbols (Size)
