[package]
name = "tachyon-tex"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tectonic = { version = "0.15", default-features = false }
tectonic_bundles = "0.2"
tower-http = { version = "0.5", features = ["limit", "cors", "compression-zstd", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
zip = "0.6"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"
anyhow = "1.0"
rmcp = { path = "./rust-sdk/crates/rmcp", features = ["server", "transport-streamable-http-server"] }
rmcp-macros = { path = "./rust-sdk/crates/rmcp-macros" }
schemars = "0.8"
tokio-util = "0.7"

[features]
default = ["external-harfbuzz"]
external-harfbuzz = ["tectonic/external-harfbuzz"]

[profile.release]
opt-level = 3       # Max performance (Speed)
lto = true          # Enable Link Time Optimization (Speed + Size)
codegen-units = 1   # More optimizations (Speed + Size)
strip = true        # Automatically strip symbols (Size)

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "a62ce77d56ee07513b4b67de1ec2daeaebfae51a"
overlay-triplets-path = "tectonic-source/dist/vcpkg-triplets"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-release", install = [
    "fontconfig",
    "freetype",
    "harfbuzz[graphite2]",
    "icu",
] }
